# wtsdr

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yaml  package-lock.json  package.json
backend/: Cargo.toml  README.md  conf.toml  docker-compose.yaml
backend/migrations/2025-09-07-035814_create_users/: down.sql  up.sql
backend/migrations/2025-09-08-002412_create_customer_service_domain/: down.sql  up.sql
backend/migrations/2025-09-08-003403_create_customer_service/: down.sql  up.sql
backend/src/: main.rs
backend/src/common/: error.rs  result.rs
backend/src/domain/: mod.rs
backend/src/domain/entity/: customer_service.rs  mod.rs  person.rs  user.rs
backend/src/domain/usecase/: mod.rs
backend/src/domain/usecase/auth/: login.rs  mod.rs  signin.rs  signup.rs
backend/src/domain/usecase/user/: create_user.rs  delete_user.rs  mod.rs  update_user.rs
backend/src/domain/vo/: auth_token.rs  customer_service_category.rs  description.rs  email.rs  geopoint.rs  id.rs  mod.rs  name.rs  password.rs  phone.rs  photo.rs  tags.rs  tax_id.rs  temporal.rs  url.rs
backend/src/infrastructure/: postgres.rs
backend/src/presentation/: app_routes.rs  error_handler.rs  mod.rs
backend/src/presentation/auth/: auth_handler.rs  dto.rs  mod.rs
backend/src/presentation/guard/: auth.rs
backend/src/presentation/user/: dto.rs  mod.rs  user_handler.rs  user_route.rs
backend/src/repositories/: mod.rs  schema.rs
backend/src/repositories/customer_service/: model.rs  repository.rs
backend/src/repositories/user/: mod.rs  model.rs  user_repository.rs
(+20 files in other folders)
