[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.0", features = ["v7"] }
env_logger = "0.11.8"
validator = { version = "0.20.0", features = ["derive"] }
derive = "1.0.0"
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "numeric"] }
dotenv = "0.15.0"
regex = "1.11.2"
sha2 = "0.10.9"
hex = "0.4.3"
serde_json = "1.0.143"
jsonwebtoken = "9.3.1"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

